--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Data source=dotnetapp.db"
+    "DefaultConnection": "Data source=dotnetapp.db"
   },
+  "TokenKey": "SOMETHING SECURE",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
